--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^1.9.1"
   },
   "dependencies": {
+    "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.0",
     "connect-flash": "^0.1.1",
     "errorhandler": "^1.4.3",
