--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "knex": "^0.10.0",
-    "passport": "^0.3.2"
+    "passport": "^0.3.2",
+    "swig": "^1.4.2"
   }
 }
