--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bluebird": "^3.3.4",
     "body-parser": "^1.15.0",
     "connect-flash": "^0.1.1",
+    "connect-multiparty": "^2.0.0",
     "connect-redis": "^3.0.2",
     "errorhandler": "^1.4.3",
     "express": "^4.13.4",
