--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "connect-flash": "^0.1.1",
     "connect-multiparty": "^2.0.0",
     "connect-redis": "^3.0.2",
+    "dateformat": "^1.0.12",
     "errorhandler": "^1.4.3",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
