--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-session": "^1.13.0",
     "jsonwebtoken": "^5.7.0",
     "knex": "^0.10.0",
+    "moment": "^2.12.0",
     "nodemon": "^1.9.1",
     "objection": "^0.4.0",
     "passport": "^0.3.2",
