--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mypress",
-  "version": "0.0.0",
-  "description": "MyPress is...",
+  "version": "0.1.0",
+  "description": "MyPress is simply to create a website to introduce yourself.",
   "main": "index.js",
   "scripts": {
     "test": "NODE_ENV=test node_modules/.bin/mocha test/",
@@ -33,6 +33,7 @@
     "objection": "^0.4.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "pg": "^4.5.3",
     "swig": "^1.4.2"
   }
 }
