--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jsonwebtoken": "^5.7.0",
     "knex": "^0.10.0",
     "moment": "^2.12.0",
+    "mongoose": "^4.4.12",
     "nodemon": "^1.9.1",
     "objection": "^0.4.0",
     "passport": "^0.3.2",
