--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gulp-rev-append": "^0.1.8",
     "gulp-uglify": "^2.1.2",
     "hapi-db-manager": "^1.0.3",
+    "hoek": "^4.1.1",
     "inert": "^4.2.0",
     "jshint": "^2.9.4",
     "lab": "^13.0.2",
