--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jshint": "^2.9.4",
     "lab": "^13.0.2",
     "livereactload": "^3.3.0",
+    "proxyquire": "^1.7.11",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-proxy": "^1.1.8",
