Added some testing cases. (#11)
* Added basic testing cases and separate the init functions.

* Added testing cases for settings model.

* Added testing cases for common controller.

* Changed the comment.

* Fixed the name of the language data model and added testing cases for language data model.

* Refactor config file and added testing cases for config.

* Fixed config testing and added testing cases for each environment.

* Fixed some bugs.

* Added testing cases for init.

* Moved index into integration testing folder.

* Added testing cases for response handler.

* Removed non-used code.

* Fixed testing bug.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "MyPress is simply to create a website to introduce yourself.",
   "main": "index.js",
   "scripts": {
-    "test": "npm run migration-test && NODE_ENV=test node_modules/.bin/lab test/ -t 100 -L",
+    "test": "npm run migration-test && NODE_ENV=test node_modules/.bin/lab test/ -L -I '__core-js_shared__'",
     "test-cov-html": "npm run migration-test && NODE_ENV=test node_modules/.bin/lab test/ -r html -o coverage.html",
     "start": "TZ=UTC npm run dev",
     "dev": "npm run migration-dev && TZ=UTC NODE_ENV=dev node_modules/.bin/gulp & npm run watch:bundle",
@@ -26,6 +26,7 @@
     "babel-preset-stage-3": "^6.24.1",
     "babelify": "^7.3.0",
     "browser-sync": "^2.18.8",
+    "code": "^4.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-clean-css": "^3.0.4",
@@ -37,10 +38,12 @@
     "gulp-rev-append": "^0.1.8",
     "gulp-uglify": "^2.1.2",
     "hapi-db-manager": "^1.0.3",
+    "hoek": "^4.1.1",
     "inert": "^4.2.0",
     "jshint": "^2.9.4",
     "lab": "^13.0.2",
     "livereactload": "^3.3.0",
+    "proxyquire": "^1.7.11",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-proxy": "^1.1.8",
